# chomp

./: .gitignore  Cargo.toml  Chomp.desktop  Makefile  README.md  app.go  calories.go  caloriesData.go  caloriesModel.go  db.go  fitnotes.go  form.go  go.mod  go.sum  importData.go  importModel.go  main.go  mainMenuModel.go  settingsData.go  settingsModel.go  sqlHelpers.go  styles.go  update.go  view.go  weight.go  weightData.go  weightModel.go
chomp-app/: Cargo.toml
chomp-app/src/: app.rs  main.rs
chomp-app/src/data/: mod.rs  product.rs  weight.rs
chomp-app/src/widget/: calorie_target_list.rs  create_calorie_target.rs  create_nutrition_target.rs  create_product.rs  create_product_portion.rs  create_weight.rs  dashboard.rs  date_picker.rs  form_field.rs  line_chart.rs  meal_list.rs  mod.rs  modal.rs  nutrition_target_list.rs  product_list.rs  product_portion_list.rs  sidebar.rs  style.rs  tools.rs  update_calorie_target.rs  update_nutrition_target.rs  update_product.rs  update_product_portion.rs  update_weight.rs  weight_list.rs
chomp-db/: Cargo.toml
chomp-services/: Cargo.toml
migrations/: 000001_create_calories_table.down.sql  000001_create_calories_table.up.sql  000002_create_weights_table.down.sql  000002_create_weights_table.up.sql  000003_create_settings_table.up.sql  000004_add_default_settings_values.down.sql  000004_add_default_settings_values.up.sql
script/: install-linux.sh
src/: app.rs  create_product_screen.rs  dashboard_screen.rs  form_field.rs  main.rs  meal_list.rs  meal_list_screen.rs  meal_product_form.rs  modal.rs  product_form.rs  (+5 more)
(+36 files in other folders)
