[package]
name = "chomp"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rfd = "0.15.3"
csv = "1.3.1"
