[package]
name = "chomp"
version = "0.1.0"
edition = "2021"

[dependencies]
chomp-db = { path = "../chomp-db" }
chomp-services = { path = "../chomp-services" }
iced = { version = "0.13.1", features = ["canvas", "tokio"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rfd = "0.15.3"
csv = "1.3.1"
